# detortoise

./: README.md  pyproject.toml
detortoise/: __init__.py  parameter_efficient.py  patching.py
detortoise/layers/: __init__.py  dora.py  loha.py  lora.py  quantized.py
detortoise/quantization/: nf4.py
detortoise/quantization/kernels/: nf4_jax.py
